--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     console.log("Hello World!")
   </script> -->
 
-  <!-- <script src="https://static.line-scdn.net/liff/edge/versions/2.4.1/sdk.js"></script> -->
+  <script src="https://static.line-scdn.net/liff/edge/versions/2.4.1/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
@@ -75,12 +75,24 @@
     }
 
     function getEnvironment() {
+      document.getElementById("os").append(liff.getOS())
+      document.getElementById("language").append(liff.getLanguage())
+      document.getElementById("version").append(liff.getVersion())
+      document.getElementById("accessToken").append(liff.getAccessToken())
+      document.getElementById("isInClient").append(liff.isInClient())
+      if (liff.isInClient()) {
+        document.getElementById("btnLogOut").stlye.display = "none"
+      } else {
+        document.getElementById("btnMsg").stlye.display = "none"
+        document.getElementById("btnScanCode").stlye.display = "none"
+        document.getElementById("btnClose").stlye.display = "none"
+      }
     }
 
     async function main() {
       alert("LINE Developers x Skooldio")
-      await liff.init({ liffId: "YOUR-LIFF-ID" })
-      // getEnvironment()
+      await liff.init({ liffId: "1655038597-qEd8MEr4" })
+      getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
