--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       document.getElementById("accessToken").append(liff.getAccessToken())
       document.getElementById("isInClient").append(liff.isInClient())
       if (liff.isInClient()) {
-        document.getElementById("btnLogOut").stlye.display = "none"
+        document.getElementById("btnLogOut").style.display = "none"
       } else {
-        document.getElementById("btnMsg").stlye.display = "none"
-        document.getElementById("btnScanCode").stlye.display = "none"
-        document.getElementById("btnClose").stlye.display = "none"
+        document.getElementById("btnMsg").style.display = "none"
+        document.getElementById("btnScanCode").style.display = "none"
+        document.getElementById("btnClose").style.display = "none"
       }
     }
 
